Fix some issue