@@ -8,7 +8,7 @@ import java.util.List;
 
 @Service
 public class TransactionService {
-    public List<Transaction> findAllByAccountNumber(String accountNumber) {
-        return Arrays.asList(new Transaction());
+    public List<Transaction> findAllByAccountNumber(Integer accountNumber) {
+        return List.of(new Transaction("credit", 1234567, "USD", 100.00, "acme", "acme.png"));
     }
 }
